# NigoraProject1

./: CMakeLists.txt  assets.cpp  assets.h  enemies_controller.cpp  enemies_controller.h  enemy.h  game_state.h  globals.h  graphics.cpp  graphics.h  images.cpp  images.h  level.cpp  level.h  level_manager.cpp  level_manager.h  physics.h  platformer.cpp  player.cpp  player.h  player_manager.cpp  player_manager.h
