cmake_minimum_required(VERSION 3.27)
project(platformer)

set(CMAKE_CXX_STANDARD 17)

find_package(raylib CONFIG REQUIRED)
if(APPLE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
elseif(UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -fsanitize=address -fsanitize=undefined")
endif()

add_executable(platformer
        platformer.cpp
        player.cpp
        graphics.cpp
        enemies_controller.cpp
        level_manager.cpp
        player_manager.cpp
        assets.cpp

        globals.h
        graphics.h
        level.h
        player_manager.h
        enemy.h
        utilities.h
        enemies_controller.h
        level_manager.h
        physics.h
        game_state.h
        assets.h
)
target_link_libraries(platformer PRIVATE raylib)
